test/tests/stages/16_characters_and_strings/valid/strings_as_initializers/write_to_array.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: puts
        List[1]: 
          TIdentifier: s
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Pointer: 
              Char: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[10]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: flat_arr
                  CSingleInit: 
                    CString: 
                      CStringLiteral: 
                        List[3]: 
                          TChar: 97
                          TChar: 98
                          TChar: 99
                      None: 
                    None: 
                  Array: 
                    TLong: 4
                    Char: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: puts
                  List[1]: 
                    CVar: 
                      TIdentifier: flat_arr
                      None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CVar: 
                      TIdentifier: flat_arr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 120
                    None: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: puts
                  List[1]: 
                    CVar: 
                      TIdentifier: flat_arr
                      None: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: nested_array
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[5]: 
                              TChar: 72
                              TChar: 101
                              TChar: 108
                              TChar: 108
                              TChar: 111
                          None: 
                        None: 
                      CSingleInit: 
                        CString: 
                          CStringLiteral: 
                            List[5]: 
                              TChar: 87
                              TChar: 111
                              TChar: 114
                              TChar: 108
                              TChar: 100
                          None: 
                        None: 
                    None: 
                  Array: 
                    TLong: 2
                    Array: 
                      TLong: 6
                      Char: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: puts
                  List[1]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: nested_array
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: puts
                  List[1]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: nested_array
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 1
                        None: 
                      None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: nested_array
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 74
                    None: 
                  None: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: puts
                  List[1]: 
                    CSubscript: 
                      CVar: 
                        TIdentifier: nested_array
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
